don't remember what that semi-colon was doing

--- a/frontend/views/layout_head.html.erb
+++ b/frontend/views/layout_head.html.erb
@@ -39,7 +39,7 @@
               container_summaries.push(summary_items.join(', '));
             });
 
-            container_summary += container_summaries.join('; ');
+            container_summary += container_summaries.join(' ');
           }
 
           return container_summary;
